--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.1.4",
     "axios": "^1.7.7",
-    "next": "14.2.8",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.9.0",
+    "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.23.8"
