--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/themes": "^3.1.4",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.9.0",
     "lucide-react": "^0.455.0",
     "next": "^14.2.15",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-intersection-observer": "^9.13.1",
@@ -35,6 +39,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
+    "shadcn": "^2.1.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
